updating to make it JDK 1.7 and JDK 11